# driftbench

./: .anonymize.example.json  .gitignore  LICENSE  README.md  pyproject.toml
docs/: dataset_card.md
drift_bench/: __init__.py  config.yaml  pipeline.py  run_analysis.py  run_followup.py  run_monitored.py  run_openweight.py
drift_bench/analysis/: aggregate.py  blind_comparison.py  debiasing.py  figures.py  probes.py  release_manifest.py  reliability.py  stats.py  validation.py  verbosity.py
drift_bench/briefs/: agri_01.yaml  astro_01.yaml  astro_02.yaml  climate_01.yaml  cogsci_01.yaml  cogsci_02.yaml  eco_01.yaml  eco_02.yaml  econ_01.yaml  econ_02.yaml  edu_01.yaml  edu_02.yaml  energy_01.yaml  energy_02.yaml  epi_01.yaml  epi_02.yaml  finance_01.yaml  finance_02.yaml  genomics_01.yaml  genomics_02.yaml  hci_01.yaml  legal_01.yaml  legal_02.yaml  matsci_01.yaml  matsci_02.yaml  molbio_01.yaml  neuro_01.yaml  neuro_02.yaml  nlp_01.yaml  nlp_02.yaml  psych_01.yaml  pubhealth_01.yaml  pubhealth_02.yaml  robot_01.yaml  robot_02.yaml  soccomp_01.yaml  soccomp_02.yaml  urban_01.yaml
drift_bench/judges/: auditor.py  calibration.yaml  judge.py  judge_blind.py  judge_skeptical.py  judge_structured.py  rubrics.yaml  structure_extractor.py
drift_bench/prompts/: auditor.j2  checkpoint.j2  judge.j2  judge_blind.j2  loader.py  (+8 more)
scripts/: build_dataset_release.py  evaluate_model.py  fetch_from_hf.py  reproduce.sh
tests/: conftest.py  test_aggregate.py  test_judge_routing.py  test_probes.py  test_prompts.py  test_runners.py  test_schema.py  test_score_serialization.py
(+7 files in other folders)
